SplashScreenActivity.kt completed

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="font_black">#444444</color>
+
+    <color name="color_primary">#FF0037</color>
+    <color name="color_primary_dark">#C30011</color>
+    <color name="color_accent">#FF5B61</color>
 </resources>
