MainActivity.kt completed

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="color_primary">#FF0037</color>
     <color name="color_primary_dark">#C30011</color>
     <color name="color_accent">#FF5B61</color>
+    <color name="color_bg">#EDEEF1</color>
 </resources>
