--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -15,11 +15,8 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
-            android:layout_width="90dp"
+            android:layout_width="100dp"
             android:layout_height="0dp"
-            android:layout_marginVertical="4dp"
-            android:layout_marginStart="4dp"
-            app:cardCornerRadius="5dp"
             app:cardElevation="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="3:4"
@@ -47,6 +44,7 @@
             android:singleLine="true"
             android:textColor="@color/font_black"
             android:textSize="18sp"
+            android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/cardView"
             app:layout_constraintTop_toTopOf="@+id/cardView"
@@ -77,8 +75,10 @@
             android:fontFamily="@font/source_sans_pro"
             android:textColor="@color/font_black"
             android:textSize="15sp"
+            android:layout_marginBottom="8dp"
             android:lines="3"
             android:maxLines="3"
+            android:lineSpacingMultiplier="0.9"
             android:ellipsize="end"
             app:layout_constraintBottom_toBottomOf="@+id/cardView"
             app:layout_constraintEnd_toEndOf="parent"
