--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,4 +23,9 @@
         <item name="fontFamily">@font/open_sans_semibold</item>
     </style>
 
+    <style name="CustomRatingStyle" parent="@style/Widget.AppCompat.RatingBar.Small">
+        <item name="android:progressTint">@color/color_rating</item>
+        <item name="android:progressBackgroundTint">@color/color_rating</item>
+    </style>
+
 </resources>
