--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -9,6 +9,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_movie"
         android:layout_width="match_parent"
+        android:layout_marginVertical="4dp"
         android:layout_height="match_parent"
         tools:listitem="@layout/item_movie"/>
 
