--- a/app/src/main/res/layout/fragment_tv.xml
+++ b/app/src/main/res/layout/fragment_tv.xml
@@ -8,7 +8,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_tv"
+        android:layout_marginVertical="4dp"
         android:layout_width="match_parent"
+        tools:listitem="@layout/item_movie"
         android:layout_height="match_parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
