--- a/app/src/main/res/layout/fragment_tv.xml
+++ b/app/src/main/res/layout/fragment_tv.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_bg"
-    tools:context=".fragment.tv.TvFragment">
+    tools:context=".ui.fragment.tv.TvFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_tv"
