create unit test for MovieViewModel.kt and TvViewModel.kt

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -88,6 +88,7 @@
 
         <TextView
             android:id="@+id/tv_duration"
+            android:visibility="gone"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
