--- a/app/src/main/res/layout/layout_no_connection.xml
+++ b/app/src/main/res/layout/layout_no_connection.xml
@@ -13,6 +13,7 @@
         android:src="@drawable/ic_no_connection"/>
 
     <TextView
+        android:id="@+id/tv_no_connection"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/no_internet_connection"
