--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,10 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:windowBackground">@color/color_bg</item>
+        <item name="backgroundColor">@color/color_bg</item>
+        <item name="background">@color/color_bg</item>
+
     </style>
 
     <style name="Theme.SplashScreen" parent="Theme.MovieCatalogue">
