--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -189,4 +189,15 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btn_favorite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/font_black"
+        android:layout_gravity="bottom|end"
+        app:tint="#FF0015"
+        app:borderWidth="0dp"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_favorite_border_color"/>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
