--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,32 @@
     android:layout_height="match_parent"
     tools:context="com.irfan.moviecatalogue.ui.activity.main.MainActivity">
 
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar"
+        android:layout_width="match_parent"
+        app:elevation="0dp"
+        android:background="@color/color_primary"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="wrap_content">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+    </com.google.android.material.appbar.AppBarLayout>
+
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:background="@color/color_primary"
-        app:layout_constraintTop_toTopOf="parent"
         app:tabSelectedTextColor="@color/white"
+        app:layout_constraintTop_toBottomOf="@id/app_bar"
+        app:tabIndicatorColor="@color/white"
         android:layout_height="wrap_content"
         app:tabTextAppearance="@style/CustomTextAppearance"
         app:tabMode="fixed" />
