--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -193,6 +193,7 @@
         android:id="@+id/btn_favorite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/button_to_add_or_remove_item_from_favourite"
         android:backgroundTint="@color/font_black"
         android:layout_gravity="bottom|end"
         app:tint="#FF0015"
